[package]
name = "tiny-error"
version = "1.0.0"
edition = "2021"
description = "A small crate for simple error handling"
repository = "https://github.com/Sapiet1/tiny-error"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
